# scientific-mcps

./: .gitignore  CLAUDE.md  README.md  context.md  pyproject.toml
.github/workflows/: markdowns_for_webpage.yml  quality_control.yml  update-readme.yml
Compression/: README.md  capability_test.py  pyproject.toml  test_capability.py
Compression/data/: config.json  data.csv  huge_log.txt  small_log.txt
Compression/src/compression/: __init__.py  mcp_handlers.py  server.py
Compression/src/compression/capabilities/: __init__.py  compression_utils.py
Compression/src/compression_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Compression/tests/: test_compression_handlers.py
HDF5/: .gitignore  README.md  pyproject.toml
HDF5/src/: mcp_handlers.py
HDF5/tests/: test_hdf5_list.py  test_mcp_handlers.py  test_server.py
Jarvis/src/jarvis_mcp/: server.py
Jarvis/src/jarvis_mcp/capabilities/: jarvis_handler.py
Node_Hardware/: README.md  demo.py  pyproject.toml
Node_Hardware/src/: __init__.py  __main__.py  mcp_handlers.py  server.py
Node_Hardware/src/implementation/: __init__.py
Node_Hardware/src/node_hardware/: mcp_handlers.py  server.py
Node_Hardware/tests/: __init__.py  test_capabilities.py  test_handlers.py  test_integration.py  test_mcp_handlers.py  test_server.py
Pandas/: README.md  pyproject.toml  test_all_capabilities.py
Pandas/data/: employees.h5  employees.json  employees.parquet  employees.xlsx  employees_cleaned.csv  employees_filtered.csv  employees_grouped.csv  employees_merged.csv  employees_sample_random.csv  inventory.csv  inventory.h5  inventory.json  inventory.parquet  inventory.xlsx  sales.csv  sales.h5  sales.json  sales.parquet  sales.xlsx  sales_filtered.csv  sales_pivot.csv  sales_sample_random.csv  weather.csv  weather.h5  weather.json  weather.parquet  weather.xlsx  weather_resample.csv  weather_rolling.csv
Pandas/src/: __main__.py  mcp_handlers.py  server.py
Pandas/src/implementation/: mcp_handlers.py
Pandas/src/pandasmcp/: mcp_handlers.py  server.py
Pandas/tests/: test_mcp_handlers.py
Plot/: README.md
Plot/src/: __main__.py  mcp_handlers.py  server.py
Plot/src/plot/: server.py
Plot/tests/: test_handlers.py  test_integration.py  test_plot_mcp.py  test_server.py
Slurm/: IMPLEMENTATION_COMPLETE.md  NODE_ALLOCATION_SUMMARY.md  README.md  allocate_node.py  deallocate_node.py  execution_commands_log.md  final_demo.py  instruction.md  node_allocation_demo.py  node_allocation_demo_new.py  readme_new.md  result.md  server_manager.sh  test_job.sh
Slurm/slurm_installation/: final_test.sh
Slurm/src/: __main__.py  mcp_handlers.py  server.py
Slurm/src/capabilities/: node_allocation.py  slurm_handler.py
Slurm/tests/: test_node_allocation.py
compression_Suresh Battula/: Readme.md
docs/: docusaurus.config.js
docs/mcps/: adios.html  arxiv.html  compression.html  darshan.html  hdf5.html  jarvis.html  lmod.html  mcp-adios.md  mcp-arxiv.md  mcp-chronolog.md  mcp-compression.md  mcp-darshan.md  mcp-hdf5.md  mcp-jarvis.md  mcp-lmod.md  mcp-node_hardware.md  mcp-pandas.md  mcp-parallel_sort.md  mcp-parquet.md  mcp-plot.md  mcp-slurm.md  node_hardware.html  pandas.html  parallel_sort.html  plot.html  slurm.html
docs/src/components/MCPShowcase/: index.js
mcps/Adios/: README.md  pyproject.toml
mcps/Adios/docs/: bp5_variable_chunking.md
mcps/Adios/src/: mcp_handlers.py  server.py
mcps/Adios/src/implementation/: bp5_read_variable_at_step.py  bp5_read_variable_chunk.py
mcps/Adios/tests/: test_bp5_read_variable_chunk.py
mcps/Arxiv/: README.md  pyproject.toml
mcps/Arxiv/src/: server.py
mcps/Arxiv/tests/: test_server.py
mcps/Chronolog/: pyproject.toml
mcps/Chronolog/src/chronomcp/: server.py
mcps/Compression/: README.md  pyproject.toml
mcps/Compression/src/: server.py
mcps/Darshan/: pyproject.toml
mcps/HDF5/: README.md  pyproject.toml
mcps/HDF5/src/: server.py
mcps/Jarvis/: pyproject.toml
mcps/Jarvis/src/: server.py
mcps/NDP/: README.md  pyproject.toml
mcps/NDP/src/: __init__.py  ndp_mcp_server.py
mcps/NDP/test/: earthscope_gemini_prompt.md  prompt.md  requirements.txt
mcps/Node_Hardware/: pyproject.toml
mcps/Node_Hardware/src/: server.py
mcps/Pandas/: pyproject.toml
mcps/Pandas/src/: server.py
mcps/Parallel_Sort/: README.md  pyproject.toml
mcps/Parallel_Sort/src/: server.py
mcps/Plot/: pyproject.toml
mcps/Plot/src/: server.py
mcps/Plot/tests/: test_handlers.py  test_server.py
mcps/Slurm/: README.md  pyproject.toml
mcps/Slurm/src/: server.py
mcps/Slurm/src/implementation/: node_allocation.py
mcps/Slurm/tests/: test_coverage_improvement.py  test_node_allocation_coverage.py  test_server_tools.py
mcps/lmod/: pyproject.toml
mcps/lmod/src/: server.py
mcps/parquet/: pyproject.toml
parquet/: README.md  capability_test.py  pyproject.toml  pytest.ini
parquet/data/: sample_data.csv  sample_data.json  sample_data.parquet  sample_employees.parquet  temperature_data.parquet  weather_data.parquet
parquet/src/: __init__.py
parquet/src/parquet/: __init__.py  mcp_handlers.py  server.py
parquet/src/parquet/capabilities/: __init__.py  format_conversion.py  metadata.py  parquet_io.py  statistics.py
parquet/src/parquet_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
parquet/tests/: __init__.py  test_capabilities.py  test_integration.py  test_mcp_handlers.py  test_server.py
