[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compression-mcp"
version = "0.1.0"
description = "Compression MCP server implementation using Model Context Protocol with multi-format compression support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=0.1.0",
  "pytest-asyncio>=1.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.95.0",
  "uvicorn>=0.21.0",
  "pydantic>=1.10.0",
  "pytest>=7.2.0",
  "requests>=2.28.0",
  "numpy>=1.24.0",
  "tqdm>=4.64.0",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "httpx"]

[project.scripts]
compression-mcp = "compression.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

