[project]
name = "arxiv-mcp"
version = "1.0.0"
description = "ArXiv MCP server implementation using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Scientific MCPs", email = "contact@iowarp.org" }
]

keywords = ["data processing", "arxiv", "publications", "scientific data", "research", "papers"]

dependencies = [
    "mcp[cli]>=1.10.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",  # Used in server.py: from dotenv import load_dotenv
]

[dependency-groups]
dev = [
     "mypy>=1.17.0",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.0.0",
     "pytest-cov>=6.2.1",
     "ruff>=0.12.5",
]

[project.scripts]
arxiv-mcp = "server:main"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
