[project]
name = "compression-mcp"
version = "1.0.0"
description = "Compression MCP server implementation using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IoWarp Scientific MCPs", email = "contact@iowarp.org" }
]

keywords = ["compression", "gzip", "storage", "archival", "backup", "analytics", "statistics"]


dependencies = [
    "mcp[cli]>=1.10.0",
    "python-dotenv>=1.0.0",  # Used in server.py: from dotenv import load_dotenv
    "h11>=0.16.0",  # Override vulnerable version
    "starlette>=0.47.2",  # Override vulnerable version  
    "requests>=2.32.4",  # Override vulnerable version
    "urllib3>=2.5.0",  # Override vulnerable version
]

[dependency-groups]
dev = [
     "mypy>=1.17.0",
     "pip-audit>=2.9.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
     "pytest-cov>=6.2.1",
     "ruff>=0.12.5",
]

[project.scripts]
compression-mcp = "server:main"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
